# dualGNN

./: .gitignore  CITATION.cff  MANIFEST.in  README.md  environment.yml  pyproject.toml  setup.py
.github/workflows/: check-version.yml  publish.yml  test.yml
ckpts/: D32K16.pt  README.md  reinforce.pt
docs/: hf_model_card.md
eval/: README.md  evaluate.py  polygons.json
eval/uniformity/: 4x4sq.py  4x6tri.py  README.md  _diag.py
hf/: README.md
notebooks/: inference_demo.ipynb  ntfe_demo.ipynb
scripts/: harvest.py  make_polygons.py  reinforce.py  train.py  visualize.py
src/dualgnn/: __init__.py  device.py  dualgraph.py  geometry.py  model.py  ntfe.py  sampler.py
src/dualgnn/ckpts/: README.md  reinforce.pt
src/dualgnn/reference_samplers/: __init__.py
src/dualgnn/reference_samplers/_grow2d/: grow2d.pyx
src/dualgnn/reference_samplers/_pushing/: pushing.pyx
src/dualgnn/training/: __init__.py  harvest.py  hparams.py  io.py  loop.py  polygons.py  reinforce.py  state.py  target_conditional.py
tests/: test_dualgraph.py  test_frontdoor.py  test_geometry.py  test_ntfe.py  test_sampler.py  test_validation.py
tutorials/: inference_demo.ipynb  ntfe_demo.ipynb
uniformity/: README.md  _diag.py
