[build-system]
requires = ["setuptools>=61", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "dualgnn"
version = "0.0.6"
description = "Dual-graph GNN sampler for fine regular triangulations of 2D lattice polygons"
readme = "README.md"
authors = [{ name = "Nate MacFadden" }]
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "numba",
    "torch>=2.7",
    "highspy",    # LP solver: regularity check (is_regular) + NTFE pipeline
]

[project.urls]
Homepage        = "https://github.com/natemacfadden/dualGNN"
Repository      = "https://github.com/natemacfadden/dualGNN"
Paper           = "https://arxiv.org/abs/2605.27770"
"Model weights" = "https://huggingface.co/natemacfadden/dualGNN"
Archive         = "https://doi.org/10.5281/zenodo.20622920"

[project.optional-dependencies]
# tests/ need pytest; the NTFE tests additionally need CYTools, which is
# pip-installable from PyPI and pulls its own native-lib wheels (pplpy,
# pypalp, python-flint, ...).
test = ["pytest", "cytools"]
# plotting for the tutorials and the GUI (scripts/visualize.py)
viz = ["matplotlib"]
# Training additionally needs CYTools (pulls pplpy/pypalp/python-flint/etc.),
# polars for the data layer, and tensorboard for logging.
train = ["cytools", "polars", "tensorboard"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# shipped model checkpoints (DualGNN.default() loads reinforce.pt)
dualgnn = ["ckpts/*.pt"]
