[build-system]
requires = ["setuptools>=61", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "dualgnn"
version = "0.0.6"
description = "Dual-graph GNN sampler for fine regular triangulations of 2D lattice polygons"
readme = "README.md"
authors = [{ name = "Nate MacFadden" }]
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "numba",
    "torch>=2.7",
    # LP solver: regularity check (is_regular) + NTFE pipeline. Capped <1.15:
    # highspy>=1.15 references Highs::releaseMemory(), absent from the libhighs
    # bundled by regfans (a CYTools dep), so the two collide at import when the
    # training/NTFE stack is present (undefined-symbol ImportError). Verified:
    # 1.14.0 works, 1.15.0 breaks. Lift once regfans ships a newer libhighs.
    "highspy<1.15",
]

[project.urls]
Homepage        = "https://github.com/natemacfadden/dualGNN"
Repository      = "https://github.com/natemacfadden/dualGNN"
Paper           = "https://arxiv.org/abs/2605.27770"
"Model weights" = "https://huggingface.co/natemacfadden/dualGNN"
Archive         = "https://doi.org/10.5281/zenodo.20622920"

[project.optional-dependencies]
# Core test surface needs only pytest. The NTFE tests additionally need
# CYTools (in [train]); they are exercised by a dedicated CI job that installs
# .[test,train] -- the core matrix stays light and CYTools-free.
test = ["pytest"]
# plotting for the tutorials and the GUI (scripts/visualize.py)
viz = ["matplotlib"]
# Training additionally needs CYTools (pulls pplpy/pypalp/python-flint/etc.),
# polars for the data layer, and tensorboard for logging.
train = ["cytools", "polars", "tensorboard"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# shipped model checkpoints (DualGNN.default() loads reinforce.pt)
dualgnn = ["ckpts/*.pt"]
