[build-system]
requires = ["setuptools>=61", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "dualgnn"
version = "0.0.6"
description = "Dual-graph GNN sampler for fine regular triangulations of 2D lattice polygons"
readme = "README.md"
authors = [{ name = "Nate MacFadden" }]
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "numba",
    "torch>=2.7",
    # LP solver for the regularity check (is_regular). Unpinned: highspy works
    # standalone at any version; the only version constraint (matching ortools'
    # bundled HiGHS, when the CYTools stack is present) is enforced by CYTools
    # itself -- see the [train] extra's cytools>=1.4.12 floor.
    "highspy",
]

[project.urls]
Homepage        = "https://github.com/natemacfadden/dualGNN"
Repository      = "https://github.com/natemacfadden/dualGNN"
Paper           = "https://arxiv.org/abs/2605.27770"
"Model weights" = "https://huggingface.co/natemacfadden/dualGNN"
Archive         = "https://doi.org/10.5281/zenodo.20622920"

[project.optional-dependencies]
# Core test surface needs only pytest. The NTFE tests additionally need
# CYTools (in [train]); they are exercised by a dedicated CI job that installs
# .[test,train] -- the core matrix stays light and CYTools-free.
test = ["pytest"]
# plotting for the tutorials and the GUI (scripts/visualize.py)
viz = ["matplotlib"]
# Training additionally needs CYTools (>=1.4.12: that release caps highspy to
# match ortools' bundled HiGHS, so this package need not; pulls pplpy/pypalp/
# python-flint/etc.), polars for the data layer, and tensorboard for logging.
train = ["cytools>=1.4.12", "polars", "tensorboard"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# shipped model checkpoints (DualGNN.default() loads reinforce.pt)
dualgnn = ["ckpts/*.pt"]
